test/TestPhases/typechecker/invalid/RunningAFunction.blc
module

function calc() returns float64
    return 123.321
end

activity main ()()
    var x: float64
    run x = calc()
end
